--- a/website/templates/website/clinics.html
+++ b/website/templates/website/clinics.html
@@ -15,11 +15,11 @@
                 </div>
             </div>
 
-            <div class="center row">
-                <div class="col-xs-8 col-xs-offset-2">
-                    <img class="main-img" src="{% static 'website/images/straddles_cropped.jpg' %}" />
-                </div>
-            </div>
+            <!--<div class="center row">-->
+                <!--<div class="col-xs-8 col-xs-offset-2">-->
+                    <!--<img class="main-img" src="{% static 'website/images/straddles_cropped.jpg' %}" />-->
+                <!--</div>-->
+            <!--</div>-->
 
             <ul class="classes-filter text-center">
                 <li><a class="btn btn-fb-success-minor" href="#what">What?</a></li>
@@ -37,13 +37,13 @@
             <div class="center wow fadeInDown banner-subheader row">
                 <div class="banner-wrap row">
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img_left.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img_left.png' %}"/>-->
                         </div>
                         <div class="col-xs-8 col-sm-10">
                             <h2>What?</h2>
                         </div>
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img.png' %}"/>-->
                         </div>
                 </div>
             </div>
@@ -77,13 +77,13 @@
             <div class="center wow fadeInDown banner-subheader row">
                 <div class="banner-wrap row">
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img_left.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img_left.png' %}"/>-->
                         </div>
                         <div class="col-xs-8 col-sm-10">
                             <h2>Why?</h2>
                         </div>
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img.png' %}"/>-->
                         </div>
                 </div>
             </div>
@@ -107,13 +107,13 @@
             <div class="center wow fadeInDown banner-subheader row">
                 <div class="banner-wrap row">
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img_left.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img_left.png' %}"/>-->
                         </div>
                         <div class="col-xs-8 col-sm-10">
                             <h2>Who?</h2>
                         </div>
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img.png' %}"/>-->
                         </div>
                 </div>
             </div>
@@ -165,13 +165,13 @@
             <div class="center wow fadeInDown banner-subheader row">
                 <div class="banner-wrap row">
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img_left.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img_left.png' %}"/>-->
                         </div>
                         <div class="col-xs-8 col-sm-10">
                             <h2>Referral</h2>
                         </div>
                         <div class="col-xs-2 col-sm-1 banner-img-col">
-                            <img src="{% static 'website/images/banner_img.png' %}"/>
+                            <!--<img src="{% static 'website/images/banner_img.png' %}"/>-->
                         </div>
                 </div>
             </div>
