--- a/static/website/css/custom.css
+++ b/static/website/css/custom.css
@@ -2,8 +2,32 @@ html {
     height: 100%;
 }
 
+.wrap {
+  margin: 0 auto;
+  padding-top: 60px;
+  width: 97%;
+}
+
+/**
+ * Footer Styles
+ */
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: transparent;
+  height: 60px;
+}
+
 body {
-    height: 100%;
+    background-color: transparent;
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+    min-height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-color: red;
