--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -10,14 +10,14 @@
         <div class="carousel slide">
             <ol class="carousel-indicators">
                 <li data-target="#main-slider" data-slide-to="0" class="active"></li>
-                <!--<li data-target="#main-slider" data-slide-to="1"></li>-->
-                <!--<li data-target="#main-slider" data-slide-to="2"></li>-->
+                <li data-target="#main-slider" data-slide-to="1"></li>
+                <li data-target="#main-slider" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel1 item active">
                     <div class="container">
                         <div class="row slide-margin">
-                            <div class="col-xs-2 col-xs-offset-5">
+                            <div class="col-xs-5 col-xs-offset-7">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Psychological & Wellness Therapiess</h1>
                                 </div>
@@ -32,41 +32,41 @@
                     <div class="carousel-border"></div>
                 </div><!--/.item-->
 
-                <!--<div class="carousel2 item">-->
-                    <!--<div class="container">-->
-                        <!--<div class="row slide-margin">-->
-                            <!--<div class="col-sm-6 col-xs-11 col-xs-offset-1">-->
-                                <!--<div class="carousel-content">-->
-                                    <!--<h1 class="animation animated-item-1">Take the first step towards becoming a FlexiBeast</h1>-->
-                                    <!--<h2 class="animation animated-item-2">Classes in Edinburgh and the borders</h2>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="carousel-border"></div>-->
-                <!--</div>&lt;!&ndash;/.item&ndash;&gt;-->
+                <div class="carousel2 item">
+                    <div class="container">
+                        <div class="row slide-margin">
+                            <div class="col-sm-6 col-xs-11 col-xs-offset-1">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Psychological & Wellness Therapiess</h1>
+                                    <h2 class="animation animated-item-2">Specialist Performance Clinics</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-border"></div>
+                </div><!--/.item-->
 
-                <!--<div class="carousel3 item">-->
-                    <!--<div class="container">-->
-                        <!--<div class="row slide-margin">-->
-                            <!--<div class="col-sm-6 col-xs-11 col-xs-offset-1">-->
-                                <!--<div class="carousel-content">-->
-                                    <!--<h1 class="animation animated-item-1">Workshops, Stretch Clinics, Private Instruction</h1>-->
-                                    <!--<h2 class="animation animated-item-2">Focus on individual goals and problems</h2>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="carousel-border"></div>-->
-                <!--</div>&lt;!&ndash;/.item&ndash;&gt;-->
+                <div class="carousel3 item">
+                    <div class="container">
+                        <div class="row slide-margin">
+                            <div class="col-sm-6 col-xs-11 col-xs-offset-1">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Psychological & Wellness Therapiess</h1>
+                                    <h2 class="animation animated-item-2">Focus on individual goals and problems</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-border"></div>
+                </div><!--/.item-->
                </div><!--/.carousel-inner-->
         </div><!--/.carousel-->
-        <!--<a class="prev hidden-xs" href="#main-slider" data-slide="prev">-->
-            <!--<i class="fa fa-chevron-left"></i>-->
-        <!--</a>-->
-        <!--<a class="next hidden-xs" href="#main-slider" data-slide="next">-->
-            <!--<i class="fa fa-chevron-right"></i>-->
-        <!--</a>-->
+        <a class="prev hidden-xs" href="#main-slider" data-slide="prev">
+            <i class="fa fa-chevron-left"></i>
+        </a>
+        <a class="next hidden-xs" href="#main-slider" data-slide="next">
+            <i class="fa fa-chevron-right"></i>
+        </a>
     </section><!--/#main-slider-->
 
     <section id="welcome" >
@@ -100,13 +100,13 @@
                 <div class="col-sm-4">
                     <div class="media services-wrap center wow fadeInDown">
                         <div class="media-body">
-                            <h3 class="media-heading">Heading 1</h3>
+                            <h3 class="media-heading">Psychological Therapy</h3>
                             <div class="feature-wrap">
                                 <div class="feature-wrap-i">
-                                <i><img class="yogaicon img-responsive" src="{% static 'website/fonts/png/yogaicon1.png' %}"/></i>
+                                <i><img class="yogaicon img-responsive" src="{% static 'website/images/key1.png' %}"/></i>
                                 </div>
                             </div>
-                            <p>Description 1</p>
+                            <p>Holistic practice</p>
                         </div>
                         </div>
                 </div>
@@ -114,13 +114,13 @@
                 <div class="col-sm-4">
                     <div class="media services-wrap center wow fadeInDown">
                         <div class="media-body">
-                            <h3 class="media-heading">Heading 2</h3>
+                            <h3 class="media-heading">Wellness Therapy</h3>
                             <div class="feature-wrap">
                                 <div class="feature-wrap-i">
-                                <i><img class="yogaicon img-responsive" src="{% static 'website/fonts/png/yogaicon2.png' %}"/></i>
+                                <i><img class="yogaicon img-responsive" src="{% static 'website/images/key2.png' %}"/></i>
                                 </div>
                             </div>
-                            <p>Description</p>
+                            <p>Focus on individual goals and problem</p>
                         </div>
                         </div>
                 </div>
@@ -128,13 +128,13 @@
                 <div class="col-sm-4">
                     <div class="media services-wrap center wow fadeInDown">
                         <div class="media-body">
-                            <h3 class="media-heading">Heading 3</h3>
+                            <h3 class="media-heading">Performance Clinics</h3>
                             <div class="feature-wrap">
                                 <div class="feature-wrap-i">
-                                <i><img class="yogaicon img-responsive" src="{% static 'website/fonts/png/yogaicon3.png' %}"/></i>
+                                <i><img class="yogaicon img-responsive" src="{% static 'website/images/key3.png' %}"/></i>
                                 </div>
                             </div>
-                            <p>Description</p>
+                            <p>Specialist performance clinics</p>
                         </div>
                         </div>
                 </div>
@@ -170,8 +170,9 @@
                     So now, Alicia’s keys is born to provide a sanctuary, support and strategies for the best
                     possible outcomes.
                </p>
-               <p class="lead">Alicia's qualifications:</p>
-                <ul>
+               <div class="col-sm-10 col-sm-offset-2">
+               <p class="lead" style="text-align: left;">Alicia's qualifications:</p>
+                <ul style="text-align: left;">
                     <li>Health Psychology BSc <i>(Hons)</i></li>
                     <li>Health Psychology MSc <i>(with Distinction)</i></li>
                     <li>Applied Psychology <i>(Childcare and Health)</i></li>
@@ -181,18 +182,54 @@
                     <li>Diet and Nutrition Advisor <i>(Diploma)</i></li>
                     <li>Rock Star Teacher Training</li>
                 </ul>
-
-                <p class="lead">Affliliations:</p>
-                <ul>
+                </div>
+                <div class="col-sm-10 col-sm-offset-2">
+                <p class="lead" style="text-align: left;">Affliliations:</p>
+                <ul style="text-align: left;">
                     <li>International Alliance of Holistic Therapists</li>
                     <li>International Association of Neuro Linguistic Programming and Coaching</li>
                 </ul>
-
+                </div>
            </ul>
             </div>
 
         </div><!--/.container-->
     </section><!--/#about-->
+
+    <section id="locations" >
+        <div class="container">
+           <div class="center wow fadeInDown">
+                <h2>Locations</h2>
+            </div>
+            <div class="col-xs-6 center">
+                <h3>Balanced Lifestyle</h3>
+                <p>297 Gilmerton Road<br/>
+                Edinburgh<br/>
+                EH16 5UJ</p>
+                <iframe
+                  width=100%
+                  height=300px
+                  frameborder="0" style="border:2px solid black"
+                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCDTTn1vI40in1iflS5wV9I_FObkcdDTgA
+                    &q=EH165UJ">
+                </iframe>
+            </div>
+            <div class="col-xs-6 center">
+                <h3>Borders Body & Mind</h3>
+                <p>2 Edinburgh Road<br/>
+                Lauder<br/>
+                TD2 6TW</p>
+                <iframe
+                  width=100%
+                  height=300px
+                  frameborder="0" style="border:2px solid black"
+                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCDTTn1vI40in1iflS5wV9I_FObkcdDTgA
+                    &q=TD26TW">
+                </iframe>
+            </div>
+
+        </div><!--/.container-->
+    </section><!--/#welcome-->
 
     <section id="services" >
         <div class="container">
@@ -200,8 +237,12 @@
                 <h2>Services</h2>
                <p class="lead">Psychological Therapy</p>
                <p class="lead">Wellness Therapy</p>
-               <p class="lead"><a href="{% url 'website:clinics' %}">Performance Clinics</a></p>
-               <ul>
+               <p class="lead"><a href="{% url 'website:clinics' %}">Performance Clinics</a>
+                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <span class="caret"></span></a>
+               </p>
+               <div id="collapseOne" class="collapse in" aria-labelledby="headingOne">
+               <ul class="services-list">
                     <li>Golf</li>
                     <li>Running</li>
                    <li>Weight Training/Power Lifting</li>
@@ -209,6 +250,8 @@
                    <li>Injury Prevention/Recovery</li>
                    <li>Active Fexibility </li>
                 </ul>
+               </div>
+
                <p class="lead">Food and You</p>
             </div>
 
