--- a/website/templates/website/underconstruction.html
+++ b/website/templates/website/underconstruction.html
@@ -12,9 +12,10 @@
         <link rel="icon" type="image/png" href="{% static 'website/images/icon.png' %}">
 
         <!-- Bootstrap core CSS -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">        <!-- Bootstrap theme -->
-       <!-- Font awesome -->
-        <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+        <link href="{% static 'website/css/bootstrap.min.css' %}" rel="stylesheet">
+
+        <!-- Font awesome -->
+        <link href="{% static 'website/css/font-awesome.min.css' %}"rel="stylesheet">
 
         <!-- Custom styles --->
         <link href="{% static 'website/css/custom.css' %}" rel="stylesheet">
@@ -24,7 +25,7 @@
 
     <div class="container container-fluid row">
             <div class="header col-4 col-sm-4 col-md-3">
-                <img class="img-fluid rounded" src="{% static 'website/images/keys_crop.jpeg' %}"/>
+                <img class="img-responsive rounded" src="{% static 'website/images/keys_crop.jpeg' %}"/>
             </div>
 
             <div class="col-8 col-sm-8 col-md-9">
@@ -52,9 +53,6 @@
 </body>
 
 <!-- Bootstrap core js-->
-<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js" integrity="sha384-feJI7QwhOS+hwpX2zkaeJQjeiwlhOP+SdQDqhgvvo1DsjtiSQByFdThsxO669S2D" crossorigin="anonymous"></script>
+    <script src="{% static 'website/js/jquery.js' %}"></script>
+    <script src="{% static 'website/js/bootstrap.min.js' %}"></script>
 </html>
