--- a/website/templates/website/privacy_policy.html
+++ b/website/templates/website/privacy_policy.html
@@ -15,6 +15,28 @@
 
      <p>You may request to see, update or delete any information we hold about you.</p>
 
+    <h2>Cookie Policy</h2>
+        <p>A cookie is a very small file that is downloaded to your device when
+            you visit a website.  Cookies contain information that is transferred
+            to your computer’s hard drive.</p>
+    <p>We use a small number of strictly necessary cookies on this site (aliciaskeys.co.uk).
+        These cookies are essential to the operation of the website and do not store any
+        personal data.  You can find more information about the individual cookies
+        we use and the purposes for which we use them below.</p>
+    <h4>First-party (aliciaskeys.co.uk) cookies</h4>
+    <p>
+    This website will set some cookies that are essential for the website to operate
+    and display correctly. These cookies, none of which capture personally identifiable
+    information, are as follows:</p>
+    <ul>
+        <li>csrftoken – this cookie protects form submissions against cross-site request forgery</li>
+        <li>cookielaw_accepted - this cookie identifies that you have reviewed and accepted the cookie policy</li>
+    </ul>
+    <h4>Third-party cookies</h4>
+    <p>This site does not set any third-party cookies.</p>
+    <p>
+    You can block cookies by activating the setting on your browser that allows you to refuse the setting of all or some cookies. However, if you use your browser settings to block all cookies (including essential cookies) you may not be able to access all or parts of our site.
+    </p>
      <p>For further information, please contact aliciaskeystherapies@outlook.com</p>
 
 </div>
