--- a/static/website/css/main.css
+++ b/static/website/css/main.css
@@ -1944,3 +1944,13 @@ ul.classes-filter {
   display: inline-block;
   margin: 0px 10px 0px 10px;
 }
+
+
+/*Cookie law banner*/
+div#CookielawBanner {
+  background-color: rgba(255, 0, 0, 0.1);
+  padding: 5px;
+  font-size: smaller;
+  border: solid 1px rgba(255, 0, 0, 0.5);
+  margin: 5px;
+}
