--- a/static/website/css/main.css
+++ b/static/website/css/main.css
@@ -1954,3 +1954,10 @@ div#CookielawBanner {
   border: solid 1px rgba(255, 0, 0, 0.5);
   margin: 5px;
 }
+
+
+.form-error {
+  color: red;
+  font-size: small;
+  font-style: italic;
+}
