--- a/static/website/css/main.css
+++ b/static/website/css/main.css
@@ -1961,3 +1961,12 @@ div#CookielawBanner {
   font-size: small;
   font-style: italic;
 }
+
+.btn-cookie {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin-top: 0;
+  font-size: small;
+}
